--- a/.env.dist
+++ b/.env.dist
@@ -40,17 +40,17 @@ APACHE_NETWORK_IP=172.21.0.4
 MYSQL_ROOT_PASSWORD=Password1
 MYSQL_USER=user_1
 MYSQL_PASSWORD=Password1
-MYSQL56_DATA_PATH=/home/one_workspace_data/mysql56
+MYSQL56_DATA_PATH=D:\One_workspace\data\mysql56
 MYSQL56_PORT=3306
 MYSQL56_NETWORK_IP=172.21.0.5
-MYSQL57_DATA_PATH=/home/one_workspace_data/mysql57
+MYSQL57_DATA_PATH=D:\One_workspace\data\mysql57
 MYSQL57_PORT=3307
 MYSQL57_NETWORK_IP=172.21.0.6
 
 POSTGRES_VERSION=10.13
 POSTGRES_USER=root
 POSTGRES_PASSWORD=Password1
-POSTGRES_DATA_PATH=/home/one_workspace_data/postgresql
+POSTGRES_DATA_PATH=D:\One_workspace\data\postgresql
 POSTGRES_PORT=5432
 POSTGRES_NETWORK_IP=172.21.0.7
 
